Added descriptive markup to custom stylesheet

--- a/index.html
+++ b/index.html
@@ -14,13 +14,13 @@
     />
     <link href="https://fonts.googleapis.com/css2?family=Inconsolata:wght@200;400;700&family=VT323&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="./assets/css/style.css" />
-    <title>Work Day Scheduler</title>
+    <title>scheduleSimple</title>
   </head>
 
   <body>
-    <header class="jumbotron text-justify">
-      <h1 class="display-3">Work Day Scheduler</h1>
-      <p class="lead">A simple calendar app for scheduling your work day</p>
+    <header class="jumbotron text-justify mx-2">
+      <h1 class="display-3">scheduleSimple</h1>
+      <p class="lead">A simple calendar app for scheduling your work day, without losing content</p>
       <p id="currentDay" class="lead text-center"></p>
     </header>
     <div class="container">
